# ECS_practice

./: .gitignore  CMakeLists.txt  CMakePresets.json
.cache/clangd/index/: Components.cpp.25859B3359580D56.idx  Components.cpp.70940C8209B1A95E.idx  Components.hpp.88A58253C366BEC7.idx  Components.hpp.B0621051BA9EE530.idx  Entity.cpp.5E387355F315E48D.idx  Entity.cpp.659C292EC7EA8410.idx  Entity.hpp.547481210E4F135C.idx  Entity.hpp.59572ADEB59432F6.idx  EntityManager.cpp.250D86F15D50C5B7.idx  EntityManager.cpp.EEBE798B484CA21C.idx  EntityManager.hpp.2ED938DC8C114579.idx  EntityManager.hpp.E924C583D89A6CDE.idx  Game.cpp.7B64A63A653069CF.idx  Game.cpp.E12CD75A76DC5543.idx  Game.hpp.3755FB1254EFF13A.idx  Game.hpp.E809CD0D88EE810B.idx  Vec2.hpp.3204EF39FEC0AB68.idx  Vec2.hpp.6D8C3C090809FD41.idx  Vec2.inl.A5C0A84A1E36279C.idx  Vec2.inl.F2185566C1F86E82.idx  main.cpp.05CFD550E9691C91.idx  main.cpp.9874090427B1E562.idx
build-rel/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  output
build-rel/resources/config/: Config.txt  config-README.txt
include/: Components.hpp  ConfigParser.hpp  Entity.hpp  EntityManager.hpp  Game.hpp
include/Vec2/: Vec2.hpp  Vec2.inl
resources/config/: Config.txt  config-README.txt
src/: Components.cpp  ConfigParser.cpp  Entity.cpp  EntityManager.cpp  Game.cpp  main.cpp
